[package]
name = "string_py"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["satelight"]
description = "This crate aims to make the String type as easy to use as the str type in python."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
